--- a/index.html
+++ b/index.html
@@ -152,12 +152,12 @@
           </div>
         </div>
       </section>
-      <footer>
+      <footer class="footer">
         <div class="footer-nav">
           <ul>
-            <li><a href="">Privacy</a></li>
-            <li><a href="">Terms</a></li>
-            <li><a href="">Contact</a></li>
+            <li><a href="#">Privacy</a></li>
+            <li><a href="#">Terms</a></li>
+            <li><a href="#">Contact</a></li>
           </ul>
         </div>
         <div class="footer-copyright">
